added fediverse link verification

--- a/about/bookmarks/index.html
+++ b/about/bookmarks/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Bookmarks </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="" />
     <meta property="og:description" 
   content="" />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
