--- a/about/setup/index.html
+++ b/about/setup/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Setup </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/photography_setup_2.jpg" />
     <meta property="og:description" 
   content="Detailed write-up on the Cameras, software and accessories I use." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
