--- a/gallery/trichrome/vivid_flowers/index.html
+++ b/gallery/trichrome/vivid_flowers/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Vivid Flowers </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/gallery/trichrome/vivid/vivid03.jpg" />
     <meta property="og:description" 
   content="Various Trichrome photos of colourful, vivid flowers." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
