--- a/knowledge/bees/index.html
+++ b/knowledge/bees/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Bee Encyclopedia </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/bees05.jpg" />
     <meta property="og:description" 
   content="An Encyclopedia of various Bees I&#39;ve spotted, and photographed." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
