--- a/knowledge/origami/index.html
+++ b/knowledge/origami/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Origami </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/origami_3.jpg" />
     <meta property="og:description" 
   content="The art of folding paper into various forms and objects." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
