--- a/knowledge/reusingtech/index.html
+++ b/knowledge/reusingtech/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Reusing Technology </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/reusingtech02.jpg" />
     <meta property="og:description" 
   content="Tips and Tricks about reusing technology in fun and useful ways." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
