--- a/about/manga/favourites/index.html
+++ b/about/manga/favourites/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Favourites </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/about/manga02.jpg" />
     <meta property="og:description" 
   content="My list of favourite manga and recommended reads." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
