--- a/about/manga/index.html
+++ b/about/manga/index.html
@@ -7,10 +7,10 @@
     <link rel="alternate" type="application/rss+xml" href="https://d00k.net/about/manga/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/about/manga01.jpg" />
     <meta property="og:description" 
   content="Manga lists, what I&#39;m reading, what I&#39;ve read and what&#39;s my favourites." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
