--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -7,10 +7,10 @@
     <link rel="alternate" type="application/rss+xml" href="https://d00k.net/gallery/experiments/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/gallery/light/LI03.jpg" />
     <meta property="og:description" 
   content="Small collection of various experiments with light and photographic techniques." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
