--- a/gallery/experiments/light/index.html
+++ b/gallery/experiments/light/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Light Experiments </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/gallery/light/light02.jpg" />
     <meta property="og:description" 
   content="Different experiments manipulating or utilising light." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
