--- a/gallery/experiments/selfportraiture/index.html
+++ b/gallery/experiments/selfportraiture/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Self Portraiture </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/gallery/selfportraiture/SP04.jpg" />
     <meta property="og:description" 
   content="Part of an art project in early 2020 exploring ways to create self portraits digitally." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
