--- a/gallery/places/loughderg/index.html
+++ b/gallery/places/loughderg/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Lough Derg </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/gallery/places/loughderg01.jpg" />
     <meta property="og:description" 
   content="Trichrome photos taken in the idyllic Lough Derg." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
