--- a/gallery/trichrome/spring/index.html
+++ b/gallery/trichrome/spring/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Spring </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/gallery/trichrome/spring/spring05.jpg" />
     <meta property="og:description" 
   content="Spring photos in the Seasons series of Trichrome photos." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
