--- a/knowledge/beachfossils/index.html
+++ b/knowledge/beachfossils/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Beach Fossils </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/beachfossils_2.jpg" />
     <meta property="og:description" 
   content="Information on the kinds of fossils that can be found on Beaches." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
