--- a/knowledge/font_modifying/index.html
+++ b/knowledge/font_modifying/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Modifying Fonts </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/fonts_01.jpg" />
     <meta property="og:description" 
   content="Tips on modifying, tweaking and combining fonts in FontForge to reduce filesizes." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
