--- a/knowledge/ipod_modding/font_combining/index.html
+++ b/knowledge/ipod_modding/font_combining/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Font Combining </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/ipod_modding/fonts01.svg" />
     <meta property="og:description" 
   content="A guide to combing 2 or more fonts into one using Fontforge." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
