--- a/knowledge/pico8-games/index.html
+++ b/knowledge/pico8-games/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Pico-8 Games List </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/pico8.jpg" />
     <meta property="og:description" 
   content="An extensive list of the best (and my favourite) games for the Pico-8 system." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
