--- a/knowledge/seedharvesting/index.html
+++ b/knowledge/seedharvesting/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Seed Harvesting </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/savingseeds01.jpg" />
     <meta property="og:description" 
   content="A record of harvesting seeds, when to pick and how I store them." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
