--- a/knowledge/trichrome/index.html
+++ b/knowledge/trichrome/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Trichrome Technique </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/knowledge/icons/trichrome.jpg" />
     <meta property="og:description" 
   content="Detailed write-up on the Trichrome technique used to make colour images." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
