--- a/projects/adwaitapod/index.html
+++ b/projects/adwaitapod/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  adwaitapod </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/projects/adwaitapod01.jpg" />
     <meta property="og:description" 
   content="A modern, feature-rich theme for rockbox on iPod Video models." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
