--- a/projects/gamejams/index.html
+++ b/projects/gamejams/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Gamejams </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/projects/gamejam_2.jpg" />
     <meta property="og:description" 
   content="A collection of entries into various different gamejams." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
