--- a/projects/origami-designs/index.html
+++ b/projects/origami-designs/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Origami Designs </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/projects/origami_designs_1.jpg" />
     <meta property="og:description" 
   content="My own origami creations that I have come up with over the years." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
