--- a/projects/rebble_weather/index.html
+++ b/projects/rebble_weather/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Rebble Weather Icons </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/projects/rebbleweather04.jpg" />
     <meta property="og:description" 
   content="Reimagining the Pebble weather icons for use in future projects." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
