--- a/projects/streetwalker/index.html
+++ b/projects/streetwalker/index.html
@@ -6,10 +6,10 @@
     <title>D00k &nbsp;• &nbsp;  Streetwalker </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <link rel="me" href="https://post.lurk.org/@dook">
     <meta property="og:image" content="/img/projects/streetwalker_1.jpg" />
     <meta property="og:description" 
   content="A minimalist walking sim which was my first foray into programming." />
-    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
