--- a/about/manga/read/index.html
+++ b/about/manga/read/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/img/about/manga03.jpg" />
     <meta property="og:description" 
-  content="" />
+  content="List of Manga I&#39;ve previously read over the years." />
  </head>
 
  
