--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/img/assets/gallery.svg" />
     <meta property="og:description" 
-  content="Collection of photography" />
+  content="Collection of my photographic works and techniques." />
  </head>
 
  
