--- a/projects/index.html
+++ b/projects/index.html
@@ -74,7 +74,7 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
-     <a href="/projects/timetwistpop/">
+     <a href="/projects/pebble/timetwistpop/">
       <img src="/img/projects/timetwistpop02.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Time Twist Pop</h2>
