--- a/about/manga/index.html
+++ b/about/manga/index.html
@@ -76,7 +76,7 @@
      <hr>
  	</div>
  </figure>
-<p>| &ldquo;How good an art is; isn’t determined by techniques. Art is a language without words.&rdquo; - Saeki Masako, Blue Period.</p>
+<p>| &ldquo;Manga is something that is read, seen and also felt.&rdquo; - Sakamoto Shinichi.</p>
 <p><strong>Currently Reading</strong>: The world of Machida-kun, Sato-kun ga shinde kara.</p>
 
 
@@ -130,6 +130,19 @@
 <li>∘ Bakuman.</li>
 <li>∘ Usotoki Rhetoric.</li>
 <li>∘ Kaoru Hana wa Rin to Saku.</li>
+<li>∘ Sato-kun ga shinde kara.</li>
+<li>∘ The World of Machida-kun.</li>
+<li>∘ Fire Punch.</li>
+<li>∘ Yamada to Kase-san..</li>
+<li>∘ Tomo-chan wa Onna no ko!.</li>
+<li>∘ Akagami no Shirayuki-Hime.</li>
+<li>∘ A Condition called Love.</li>
+<li>∘ Shinrei Tantei Yakumo.</li>
+<li>∘ Slow Motion wo Mou Ichido.</li>
+<li>∘ Memories of Emanon.</li>
+<li>∘ Kuroiwa Medaka ni Watashi no Kawaii ga Tsuujinai.</li>
+<li>∘ Kokou no Hito.</li>
+<li>∘ Uruwashi no Yoi no Tsuki.</li>
 </ul>
 
 
