--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -71,6 +71,15 @@
      <hr>
     
     <article>
+	<h2>2022-11-25</h2>
+	<p>  What a wild month! I started the month updating a finishing off my <a href="https://d00k.net/projects/adwaitapod/" target="_blank" rel="noopener">adwaitapod</a> theme for rockbox. I also spent the past 3 weeks learning to program in C, building up to the Rebble Hackathon last weekend where I put together my watchface design, <a href="https://d00k.net/projects/pebble/timetwistpop/" target="_blank" rel="noopener">Time Twist Pop</a> and released it! It was incredibly frustrating at times, since I really have very little experience programming. However, by the end of the weekend I was getting into the zone and pumping out some really good stuff and was having a blast! Really looking forward to making more with C in the future!</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2022-10-09</h2>
 	<p>  It&rsquo;s a crazy couple of months for me, but I finally found some time to tend to the website. First thing I did was get to finalising it&rsquo;s design, the way it had been before was overly garish and pretty difficult to look at on some pages, the new style is far better in this regard. I also took the time to go absolutely overboard on optimising every possible thing I could, making each pretty tiny for what it is, I made a writeup on everything I did <a href="https://d00k.net/journal/web-optimisations/" target="_blank" rel="noopener">here</a>.</p>
 <p>  I also managed to find a new home on mastodon during this time at Lurk! It&rsquo;s a great community. A few new projects have been started as well; an accessible version of my ipod them after some user feedback, as well as a book for other people looking into making their own themes. Currently everything I&rsquo;m doing is building up for my portfolio to switch colleges with next year, so I&rsquo;m gonna be busy for the the next few months!</p>
