--- a/about/manga/index.html
+++ b/about/manga/index.html
@@ -77,7 +77,7 @@
  	</div>
  </figure>
 <p>| &ldquo;Manga is something that is read, seen and also felt.&rdquo; - Sakamoto Shinichi.</p>
-<p><strong>Currently Reading</strong>: The world of Machida-kun, Sato-kun ga shinde kara.</p>
+<p><strong>Currently Reading</strong>: Otoyomegatari.</p>
 
 
 <ul class="extra">
@@ -143,6 +143,8 @@
 <li>∘ Kuroiwa Medaka ni Watashi no Kawaii ga Tsuujinai.</li>
 <li>∘ Kokou no Hito.</li>
 <li>∘ Uruwashi no Yoi no Tsuki.</li>
+<li>∘ Yamaguchi-kun wa Warukunai.</li>
+<li>∘ Kaichou wa Maid-sama!</li>
 </ul>
 
 
