--- a/about/manga/read/index.html
+++ b/about/manga/read/index.html
@@ -72,7 +72,7 @@
     <figure>
  	<div>
      <img src="/img/about/manga03.jpg" loading="lazy" alt=" A woman dives into a blue sea.">
-     <figcaption>Yokohama Kaidashi Kikou -  Ashinano Hitoshi </figcaption>
+     <figcaption>Slow Motion wo Mou Ichido -  Rie Kano </figcaption>
      <hr>
  	</div>
  </figure>
