--- a/journal/index.html
+++ b/journal/index.html
@@ -73,6 +73,14 @@
    <ul>
   
      <li>
+     <a href="/journal/leaving-spotify/">
+      Leaving Spotify for Freer Pastures
+     <p style="margin-bottom: 10px;">How and why I&#39;m moving my listening activities away from streaming platforms.</p>
+     <hr>
+     </a>
+     </li>
+   
+     <li>
      <a href="/journal/web-optimisations/">
       Extreme Web Optimizations, without Compromising Style
      <p style="margin-bottom: 10px;">A tear-down of the web optimizations I developed while putting this site together.</p>
