year's end updates

--- a/about/music/bandcamp_buyin_22/index.html
+++ b/about/music/bandcamp_buyin_22/index.html
@@ -97,6 +97,8 @@
 <li>∘ <strong>October</strong>: &nbsp; Heart Under - Just Mustard.</li>
 
 <li>∘ <strong>November</strong>: &nbsp; When the Lights go - Totally Enormous Extinct Dinosaurs.</li>
+
+<li>∘ <strong>December</strong>: &nbsp; Jen - Plums.</li>
 </ul>
 
 
