--- a/about/music/index.html
+++ b/about/music/index.html
@@ -74,9 +74,9 @@
 
 <ul class="extra">
 
-<li>∘ How it Ends by TOLEDO.</li>
+<li>∘ Summer's Over by Jordana & TV Girl.</li>
 
-<li>∘ The Untourable Album by Men I Trust.</li>
+<li>∘ Sarah Version 3 by Thin Lizzy.</li>
 </ul>
 
 <h2 id="music-notes">Music Notes</h2>
