--- a/journal/index.html
+++ b/journal/index.html
@@ -73,6 +73,14 @@
    <ul>
   
      <li>
+     <a href="/journal/year-review-2022/">
+      Year Review 2022
+     <p style="margin-bottom: 10px;"></p>
+     <hr>
+     </a>
+     </li>
+   
+     <li>
      <a href="/journal/leaving-spotify/">
       Leaving Spotify for Freer Pastures
      <p style="margin-bottom: 10px;">How and why I&#39;m moving my listening activities away from streaming platforms.</p>
