--- a/about/manga/index.html
+++ b/about/manga/index.html
@@ -86,65 +86,12 @@
 	</li>
 
 	<li>
+	   <a href="./2022">∙ Manga read in 2022</a>.
+	</li>
+
+	<li>
 	   <a href="./read">∙ Previously Read Manga list</a>.
 	</li>
-</ul>
-
-<h2 id="read-list-2022">Read List 2022</h2>
-
-
-<ul class="extra">
-
-<li>∘ Kimetsu no Yaiba.</li>
-<li>∘ Kimi wa Hougako Insomnia.</li>
-<li>∘ Yokohama Kaidashi Kikou.</li>
-<li>∘ Blue Period.</li>
-<li>∘ Witch Hat Atelier.</li>
-<li>∘ Kusuriya no Hitorigoto.</li>
-<li>∘ Totsukuni no Shoujo.</li>
-<li>∘ Chainsaw Man.</li>
-<li>∘ Astra Lost in Space.</li>
-<li>∘ Sket Dance.</li>
-<li>∘ Hunter x Hunter.</li>
-<li>∘ Sailor Moon.</li>
-<li>∘ Nausicaä of the Valley of the Wind.</li>
-<li>∘ Spy x Family.</li>
-<li>∘ Yu Yu Hakusho.</li>
-<li>∘ World Trigger.</li>
-<li>∘ Ranma½.</li>
-<li>∘ Fujiyama san wa Shishunki.</li>
-<li>∘ Tsubasa to Hotaru.</li>
-<li>∘ My Dear Detective.</li>
-<li>∘ Our Precious Conversations.</li>
-<li>∘ My Little Monster.</li>
-<li>∘ Wash me, Hug me.</li>
-<li>∘ Your Lie in April.</li>
-<li>∘ Skip and Loafer.</li>
-<li>∘ Shimanami Tasogare.</li>
-<li>∘ I want to eat your pancreas.</li>
-<li>∘ Beck.</li>
-<li>∘ Kimi ni Todoke.</li>
-<li>∘ Ao Haru Ride.</li>
-<li>∘ A Sign of Affection.</li>
-<li>∘ Bloom into you.</li>
-<li>∘ Bakuman.</li>
-<li>∘ Usotoki Rhetoric.</li>
-<li>∘ Kaoru Hana wa Rin to Saku.</li>
-<li>∘ Sato-kun ga shinde kara.</li>
-<li>∘ The World of Machida-kun.</li>
-<li>∘ Fire Punch.</li>
-<li>∘ Yamada to Kase-san..</li>
-<li>∘ Tomo-chan wa Onna no ko!.</li>
-<li>∘ Akagami no Shirayuki-Hime.</li>
-<li>∘ A Condition called Love.</li>
-<li>∘ Shinrei Tantei Yakumo.</li>
-<li>∘ Slow Motion wo Mou Ichido.</li>
-<li>∘ Memories of Emanon.</li>
-<li>∘ Kuroiwa Medaka ni Watashi no Kawaii ga Tsuujinai.</li>
-<li>∘ Kokou no Hito.</li>
-<li>∘ Uruwashi no Yoi no Tsuki.</li>
-<li>∘ Yamaguchi-kun wa Warukunai.</li>
-<li>∘ Kaichou wa Maid-sama!</li>
 </ul>
 
 
