--- a/about/now/index.html
+++ b/about/now/index.html
@@ -69,32 +69,30 @@
    <main>
     <h1>Now</h1>
      <hr>
-    <h2 id="november-2022">November 2022</h2>
+    <h2 id="january-2023">January 2023</h2>
 
 
 <ul class="extra">
-<li>∘ Currently working on the <a class="link" href="/projects/timetwistpop">Time Twist Pop</a> watchface for the Rebble Hackathon.</li>
+<li>∘ Completing and submitting my college entry portfolio.</li>
 
-<li>∘ Updated <a class="link" href="/projects/adwaitapod">adwaitapod</a> to version 2.0.</li>
+<li>∘ Begin to set up a home server and host a gemini server.</li>
 
-<li>∘ Continue working on my rockbox theming technical book.</li>
+<li>∘ Complete my rockbox theming book.</li>
 
-<li>∘ Put all my mods into the iPod.</li>
+<li>∘ Start to learn some sketching basics.</li>
 
-<li>∘ Repair the broken Pebble watches lying around.</li>
-
-<li>∘ Start my portfolio for design college.</li>
+<li>∘ Do my yearly backup and cleanup of files and bookmarks.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
 
 
 <ul class="extra">
-<li>∘ Currently Reading too much manga to keep up.
+<li>∘ Currently reading 'Busy Doing Nothing' by Devine and Rekka.
 
-<li>∘ Listening to When the Lights go from TEED.
+<li>∘ Listening to Valentine by Snail Mail.
 
-<li>∘ Listening to How it Ends by TOLEDO.
+<li>∘ Listening to Summer's Over by Jordana & TV Girl.
 
 </ul>
 
