year's end updates

--- a/journal/index.html
+++ b/journal/index.html
@@ -75,7 +75,7 @@
      <li>
      <a href="/journal/year-review-2022/">
       Year Review 2022
-     <p style="margin-bottom: 10px;"></p>
+     <p style="margin-bottom: 10px;">Breaking down 2022, my favourite things and projects completed.</p>
      <hr>
      </a>
      </li>
