added linux section

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -74,6 +74,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/knowledge/linux/">
+      <img src="/img/knowledge/linux/linux.svg" loading="lazy" >
+      <div>
+       <h2 style="font-size:28px">Linux Wiki</h2>
+       <p>Guides to various linux command line tools and other useful information.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/font_modifying/">
       <img src="/img/knowledge/icons/fonts_01.jpg" loading="lazy" >
       <div>
