--- a/projects/ipod/index.html
+++ b/projects/ipod/index.html
@@ -3,20 +3,20 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D00k &nbsp;• &nbsp;  design </title>
-    <link rel="alternate" type="application/rss+xml" href="https://d00k.net/tags/design/index.xml" title="D00k" />
+    <title>D00k &nbsp;• &nbsp;  IPod Projects </title>
+    <link rel="alternate" type="application/rss+xml" href="https://d00k.net/projects/ipod/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/img/projects/icons/ipod.svg" />
     <meta property="og:description" 
-  content="" />
+  content="iPod themes and various work done for Rockbox theming." />
  </head>
 
- 
+
  <body>
-  <header class="home colours">
-   
+  <header class="projects colours">
+      
 <div>
 <nav>
 <ul class="name">
@@ -35,7 +35,7 @@
   
    
     <li>
-      <a class="" href="/projects/">
+      <a class="active" href="/projects/">
         Projects
       </a>
     </li>
@@ -66,57 +66,34 @@
 </div>
 
   </header>
-  <main class="no-top">
+  <main>
 
-  <h1 class="Title">design</h1>
-  <hr>
-  
-    <p>
-     <a href="/projects/pebble/timetwistpop/">∙ Time Twist Pop</a>
-    </p>
-
+   <h1>IPod Projects</h1>
+  <article>
+   <div class="flex-box">
+    <div class="columns-2">
    
-    <p>
-     <a href="/projects/ipod/adwaitapod/">∙ adwaitapod</a>
-    </p>
-
-   
-    <p>
-     <a href="/journal/web-optimisations/">∙ Extreme Web Optimizations, without Compromising Style</a>
-    </p>
-
-   
-    <p>
-     <a href="/projects/pebble/rebble_weather/">∙ Rebble Weather Icons</a>
-    </p>
-
-   
-    <p>
-     <a href="/about/colophon/">∙ Colophon</a>
-    </p>
-
-   
-    <p>
-     <a href="/projects/design/virtual-gallery/">∙ Virtual Gallery</a>
-    </p>
-
-   
-    <p>
-     <a href="/projects/design/origami-designs/">∙ Origami Designs</a>
-    </p>
-
-   
-    <p>
-     <a href="/projects/design/famicase/">∙ Famicase Exhibition</a>
-    </p>
-
-   
+        <div class="main-box list-box">
+     <a href="/projects/ipod/adwaitapod/">
+      <img src="/img/projects/adwaitapod01.jpg" loading="lazy" >
+      <div>
+       <h2 style="font-size:28px">adwaitapod</h2>
+       <p>A modern, feature-rich theme for rockbox on iPod Video models.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+   </div>
+ </div>
+  </article>
 
   <div class="back">
-   <a href="/tags/">〈 Back to  Tags </a>
+   <a class="prev" href="/projects/">〈 Back to  Projects </a>
   </div>
+  
  </main>
- </body>
+</body>
 
  <footer>
   <hr>
