--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
     <link rel="me" href="https://post.lurk.org/@dook">
-    <meta property="og:image" content="/img/gallery/light/LI03.jpg" />
+    <meta property="og:image" content="/img/gallery/light/light03.jpg" />
     <meta property="og:description" 
   content="Small collection of various experiments with light and photographic techniques." />
  </head>
@@ -75,7 +75,7 @@
    
         <div class="main-box list-box">
      <a href="/gallery/experiments/selfportraiture/">
-      <img src="/img/gallery/selfportraiture/SP04.jpg" loading="lazy" >
+      <img src="/img/gallery/selfportraiture/selfportraiture06.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Self Portraiture</h2>
        <p>Part of an art project in early 2020 exploring ways to create self portraits digitally.</p>
@@ -86,7 +86,7 @@
     
         <div class="main-box list-box">
      <a href="/gallery/experiments/lowres/">
-      <img src="/img/gallery/lowres/LR01.jpg" loading="lazy" >
+      <img src="/img/gallery/lowres/lowres01.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Low Resolution</h2>
        <p>Short series of photos with extremely small resolutions.</p>
