--- a/projects/games/streetwalker/index.html
+++ b/projects/games/streetwalker/index.html
@@ -108,7 +108,7 @@
 
 
     <div class="back">
-     <a class="prev" href="/projects/games/">〈 Back to Games and Gamejam Projects</a>
+     <a class="prev" href="/projects/games/">〈 Back to Games Projects</a>
    </div>
   </main>
  </body>
