--- a/projects/index.html
+++ b/projects/index.html
@@ -147,7 +147,7 @@
      <a href="/projects/games/">
       <img src="/img/projects/icons/games.svg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Games and Gamejam Projects</h2>
+       <h2 style="font-size:28px">Games Projects</h2>
        <p>Collection of game projects and stuff from game jams over the years.</p>
        </div>
        <hr>
