--- a/projects/games/gamejams/index.html
+++ b/projects/games/gamejams/index.html
@@ -118,7 +118,7 @@
 
 
     <div class="back">
-     <a class="prev" href="/projects/games/">〈 Back to Games and Gamejam Projects</a>
+     <a class="prev" href="/projects/games/">〈 Back to Games Projects</a>
    </div>
   </main>
  </body>
