--- a/knowledge/linux/index.html
+++ b/knowledge/linux/index.html
@@ -74,6 +74,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/knowledge/linux/pdf/">
+      <img src="/img/knowledge/linux/pdf.svg" loading="lazy" >
+      <div>
+       <h2 style="font-size:28px">PDF Utilities</h2>
+       <p>How to create, combine, add indexes, pull and add pages and more with PDFs in the Terminal</p>
+       <hr>
+       </div>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/knowledge/linux/sftp/">
       <img src="/img/knowledge/linux/sftp.svg" loading="lazy" >
       <div>
