--- a/about/bookmarks/index.html
+++ b/about/bookmarks/index.html
@@ -69,8 +69,42 @@
     <h1>Bookmarks</h1>
      
      <hr>
-    <p>  A small library of various bookmarks and websites I&rsquo;ve kept over the years. Neatly sorted for ease of use!</p>
-<p><strong>Last Updated:</strong> May 2022</p>
+    <p>  A library of various bookmarks and websites I&rsquo;ve kept over the years. Neatly sorted for ease of use!</p>
+<p><strong>Last Updated:</strong> Jan 2023</p>
+<h2 id="web-friends--cool-sites">Web Friends &amp; Cool Sites</h2>
+
+
+<ul class="extra">
+	<li>
+	   <a href="https://www.pixouls.xyz/" target="_blank" rel="noreferrer">⬩ Pixoul&#39;s Site</a>.
+	</li>
+
+	<li>
+	   <a href="https://lucas.love/" target="_blank" rel="noreferrer">⬩ Lucas.love</a>.
+	</li>
+
+	<li>
+	   <a href="https://ghettobastler.com/" target="_blank" rel="noreferrer">⬩ Ghettobastler</a>.
+	</li>
+
+	<li>
+	   <a href="https://www.simonpanrucker.com/" target="_blank" rel="noreferrer">⬩ Simon Panrucker&#39;s Site</a>.
+	</li>
+
+	<li>
+	   <a href="https://thesam.zone/" target="_blank" rel="noreferrer">⬩ theSam.Zone</a>.
+	</li>
+
+	<li>
+	   <a href="https://jagtalon.com/" target="_blank" rel="noreferrer">⬩ Jag Talon</a>.
+	</li>
+
+	<li>
+	   <a href="https://www.paritybit.ca/" target="_blank" rel="noreferrer">⬩ jbauer&#39;s Site</a>.
+	</li>
+
+</ul>
+
 <h2 id="webring">Webring</h2>
 
 
@@ -93,6 +127,10 @@
 
 	<li>
 	   <a href="https://fdisk.space/#" target="_blank" rel="noreferrer">⬩ Fdisk</a>.
+	</li>
+
+	<li>
+	   <a href="https://njoqi.me/" target="_blank" rel="noreferrer">⬩ njoqi</a>.
 	</li>
 </ul>
 
@@ -234,7 +272,7 @@
 	</li>
 
 	<li>
-	   <a href="https://lparchive.org/Dwarf-For" target="_blank" rel="noreferrer">⬩ Dwarf Fortress: The story of Boatmurdered</a>.
+	   <a href="https://lparchive.org/Dwarf-Fortress-Boatmurdered/Introduction/" target="_blank" rel="noreferrer">⬩ Dwarf Fortress: The story of Boatmurdered</a>.
 	</li>
 
 	<li>
@@ -256,28 +294,9 @@
 	</li>
 
 	<li>
-	   <a href="https://en.wikipedia.org/wiki/Brewster%27s_Millions" target="_blank" rel="noreferrer">⬩ Brewster&#39;s Millions</a>.
-	</li>
-
-	<li>
 	   <a href="https://en.m.wikipedia.org/wiki/Societal_collapse" target="_blank" rel="noreferrer">⬩ Societal Collapse</a>.
 	</li>
 
-	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Solarpunk" target="_blank" rel="noreferrer">⬩ Roadside Picnic</a>.
-	</li>
-
-	<li>
-	   <a href="https://play.date/" target="_blank" rel="noreferrer">⬩ Solarpunk</a>.
-	</li>
-
-	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Kingdom_of_Aksum" target="_blank" rel="noreferrer">⬩ Kingdom of Aksum</a>.
-	</li>
-
-	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Kingdom_of_Kush" target="_blank" rel="noreferrer">⬩ Kingdom of Kush</a>.
-	</li>
 </ul>
 
 
