--- a/about/index.html
+++ b/about/index.html
@@ -94,6 +94,11 @@
       </div>
 <div>
         <div class="contactlist">
+        ⬩ Instagram: <a href="https://www.instagram.com/__d00k/" target="_blank" rel="noreferrer">@__d00k</a>
+        </div>
+      </div>
+<div>
+        <div class="contactlist">
         ⬩ Contact me: <a href="mailto:contact@d00k.net" target="_blank" rel="noreferrer">contact@d00k.net</a>
         </div>
       </div>
