--- a/about/music/index.html
+++ b/about/music/index.html
@@ -74,9 +74,9 @@
 
 <ul class="extra">
 
-<li>∘ Summer's Over by Jordana & TV Girl.</li>
+<li>∘ Afro-Harping by Dorothy Ashby.</li>
 
-<li>∘ Sarah Version 3 by Thin Lizzy.</li>
+<li>∘ Backwater by Kllo.</li>
 </ul>
 
 <h2 id="music-notes">Music Notes</h2>
