--- a/about/now/index.html
+++ b/about/now/index.html
@@ -75,13 +75,11 @@
 <ul class="extra">
 <li>∘ Completing and submitting my college entry portfolio.</li>
 
-<li>∘ Begin to set up a home server and host a gemini server.</li>
+<li>∘ Made some updates to the site style and layout.</li>
 
-<li>∘ Complete my rockbox theming book.</li>
+<li>∘ Started a <a class="link" href="/knowledge/linux">Linux Wiki</a> for my command line cheatsheets.</li>
 
-<li>∘ Start to learn some sketching basics.</li>
-
-<li>∘ Do my yearly backup and cleanup of files and bookmarks.</li>
+<li>∘ Started attempting to make Ascii art Origami Diagrams.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
@@ -92,7 +90,7 @@
 
 <li>∘ Listening to Valentine by Snail Mail.
 
-<li>∘ Listening to Summer's Over by Jordana & TV Girl.
+<li>∘ Listening to Afro-Harping by Dorothy Ashby.
 
 </ul>
 
