--- a/about/setup/index.html
+++ b/about/setup/index.html
@@ -77,9 +77,8 @@
         </ul>
       
      <hr>
-    <p>  A breakdown of the hardware and software I use for making things, or getting things done.</p>
+    <p>  A short breakdown of my setup, the hardware and software I use for creating and doing everyday work.</p>
 <h2 id="hardware">Hardware</h2>
-<hr>
 <figure>
  	<div>
      <img src="/img/about/setup_keyboard.jpg" loading="lazy" alt="A grey and creamy white keyboard">
@@ -87,37 +86,13 @@
      <hr>
  	</div>
  </figure>
-<h3 id="-lenovo-thinkpad-e580-laptop">∘ Lenovo Thinkpad E580 Laptop.</h3>
-
-
-<ul class="extra">
-<li><strong>Cpu -</strong> Intel Core I5-8250U</li>
-
-<li><strong>Memory -</strong> 12GB</li>
-
-<li><strong>Storage -</strong> 256GB Samsung SSD</li>
-
-<li><strong>Display -</strong> 1920x1080 LCD</li>
-
-<li><strong>OS -</strong> Fedora Linux</li>
-</ul>
-
+<p><strong>∘ Lenovo Thinkpad E580 Laptop.</strong> - Going on 5 years old now, this was relatively cheap at the time for what it provided. Over the years I&rsquo;ve upgraded it with an SSD, more ram and so on. In 2021, I switched to using Fedora Linux from Windows and it&rsquo;s been an incredibly smooth experience. One downside is the weight, however it isn&rsquo;t as bad as the laptop I had before it. In the future I&rsquo;m looking at getting an <a href="https://mntre.com/media/reform_md/2022-06-20-introducing-mnt-pocket-reform.html" target="_blank" rel="noopener">MNT Pocket Reform</a> to compliment this.</p>
 <p><strong>∘ Keychron C1 Wired Keyboard.</strong>
   The Keychron C1 is an 85%, Tenkeyless wired mechanical Keyboard. I bought it mostly for it&rsquo;s low price, as well for it&rsquo;s lack of wireless and light-up features. I very much enjoy using it.</p>
-<p><strong>∘ Logitech M185 Wireless Mouse.</strong>
-  A well used Wireless Mouse from 2012. Changed the batteries like twice or three times in the past.</p>
-<p><strong>∘ Basic Wacom Drawing Tablet.</strong>
-  No tilt detection, but decent pressure levels, 4 tablet buttons and 2 pen buttons. Pen doesn&rsquo;t need batteries which is always a plus.</p>
-<h3 id="-google-pixel-3a-phone">∘ Google Pixel 3a Phone.</h3>
-
-
-<ul class="extra">
-<li><strong>OS -</strong> LineageOS 19</li>
-
-<li><strong>Battery -</strong> 3000mAh Battery</li>
-</ul>
-
-<h2 id="camera">Camera</h2>
+<p><strong>∘ Logitech M185 Wireless Mouse.</strong> - A well used Wireless Mouse from 2012. Not much to say about it, drains batteries very slowly so I&rsquo;ve only had to change once every 2 years or so. I sometimes get issues with the middle click, but giving the insides a clean has helped.</p>
+<p><strong>∘ Basic Wacom Drawing Tablet.</strong> - No tilt detection, but decent pressure levels, 4 tablet buttons and 2 pen buttons. Pen doesn&rsquo;t need batteries which is always a plus.</p>
+<p><strong>∘ Google Pixel 3a Phone.</strong> - Switched to this phone after getting sick of the stock android experience. It runs LineageOS without MicroG services. In the future, when it&rsquo;s viable, I would like to run PostmarketOS Linux on it, however usability would have to improve first.</p>
+<h2 id="cameras">Cameras</h2>
 <figure>
  	<div>
      <img src="/img/about/setup2.jpg" loading="lazy" alt="A Black Mirrorless Camera">
@@ -125,28 +100,30 @@
      <hr>
  	</div>
  </figure>
-<p>The Sony alpha 6000 is my main camera used for photography. I picked this mainly for it&rsquo;s mirrorless, lightweight build. It has many features I&rsquo;ve taken advantage of over the years, like it&rsquo;s remote control app which is fantastic for long exposures with a tripod. I never shoot in RAW, only basic file formats as I don&rsquo;t massively edit the complete photos in a conventional way, which you can read more about in my <a href="/knowledge/trichrome">Trichrome</a> post.</p>
+<p>  The Sony alpha 6000 is my main camera used for photography. I picked this mainly for it&rsquo;s mirrorless, lightweight build. It has many features I&rsquo;ve taken advantage of over the years, like it&rsquo;s remote control app which is fantastic for long exposures with a tripod. I never shoot in RAW, only basic file formats as I don&rsquo;t massively edit the complete photos in a conventional way, which you can read more about in my <a href="/knowledge/trichrome">Trichrome</a> post.</p>
+<p>  My second camera is a Sony DSC-S85 from 2001 which I got second-hand on ebay. It&rsquo;s a capable camera, and produces surprisingly good shots for it&rsquo;s age. It also has some nice features, like a small reflective LCD that shows settings when you turn off the main LCD. It also has a GIF shooting mode which is coo lto mess around with. You can see some of the shots taken with it in the <a href="/gallery/digicam/sunsets">Digicam Gallery</a>.</p>
 <h2 id="software">Software</h2>
-<hr>
 <figure>
  	<div>
      <img src="/img/about/setup3.jpg" loading="lazy" alt="A screenshot of two text editors on my desktop">
-     <figcaption>GNOME Desktop</figcaption>
-     <hr>
+     <figcaption></figcaption>
+     
  	</div>
  </figure>
-<h2 id="image-editing">Image Editing</h2>
-<p><strong>∘ Krita.</strong>
-  A great, open source painting suite that does everything I need from it. I even edit my photos using it!</p>
-<p><strong>∘ Inkscape.</strong>
-  Whenever I work with SVGs or need to make diagrams, I always use Inkscape. It just works.</p>
-<p><strong>∘ Gimp.</strong>
-  Gimp isn&rsquo;t the greatest of tools these days, however when you need to do specific things (like work with limiting colours etc.) it really comes in handy.</p>
-<h2 id="text-editors">Text Editors</h2>
-<p><strong>∘ Sublime Text.</strong>
-  When I couldn&rsquo;t stand Visual Studio&rsquo;s massive battery drain, I switched to the wonderful Sublime Text. With some add-ons for highlighting colours and some nice themes, and Sublime Text becomes a clear, simple workspace.</p>
-<p><strong>∘ Apostrophe.</strong>
-  A simple Markdown editor that I use for writing posts. Not much else to say about it!</p>
+<h3 id="image-editing">Image Editing</h3>
+<p><strong>∘ Krita.</strong> - I actually use Krita to &lsquo;develop&rsquo; my trichrome photos. It has a great range of blending modes, which I use extensively.</p>
+<p><strong>∘ Inkscape.</strong> - Inkscape is one of the main workhorse apps on my desktop. For icon creation, design mockups and even presentations, I&rsquo;m quite comfortable with it.</p>
+<p><strong>∘ Gimp.</strong> - GIMP is extremely handy for what I do, and I often use it to compress and prep images for use in projects with a level of fine control that can be hard to get with ImageMagick.</p>
+<p><strong>∘ ImageMagick.</strong> - Used from the command line, ImageMagick&rsquo;s level of automation is fantastic. You can edit full directories of photos in a single command. I&rsquo;ve written up my cheatsheet <a href="/knowledge/linux/imagemagick/">here</a>.</p>
+<h3 id="text-editors">Text Editors</h3>
+<p><strong>∘ GNOME Text Editor.</strong> - Recently I started using this new text editor from GNOME. It&rsquo;s very simple and clean, when I&rsquo;m working on simple projects like my iPod themes for example it&rsquo;s great to be able to just focus on what I&rsquo;m typing.</p>
+<p><strong>∘ Sublime Text.</strong> - When I couldn&rsquo;t stand Visual Studio&rsquo;s massive battery drain, I switched to the wonderful Sublime Text. With some add-ons for highlighting colours and some nice themes, and Sublime Text becomes a clear, simple workspace.</p>
+<p><strong>∘ Apostrophe.</strong> - A simple Markdown editor that I use for writing posts. Not much else to say about it!</p>
+<h3 id="phone-apps">Phone Apps</h3>
+<p>  I use FOSS apps for as much as I can on my phone, so these can all be found on the F-Droid store.</p>
+<p><strong>∘ K-9 Mail.</strong> - Soon to be Thunderbird Mobile, K-9 is a simple email app but has some nice features and configurability. I especially like how it handles the unified inbox.</p>
+<p><strong>∘ Feeder.</strong> - An easy to use RSS Feed reader. Recently got a visual overhaul that is okay, bit laggy at times in the UI. Might switch at some point.</p>
+<p><strong>∘ Tusky.</strong> - The other FOSS Fediverse apps have a lot of extra features and such, but Tusky draws me the most.</p>
 
   <div class="back">
    <a class="prev" href="/about/">〈 Back to  About </a>
