--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
      <hr>
      <ul>
+         <li><a href="/gallery/digicam/sunsets/">∙ Digicam</a></li>
+
          <li><a href="/gallery/trichrome/summer/">∙ Summer</a></li>
-        
-         <li><a href="/gallery/trichrome/spring/">∙ Spring</a></li>
         
          <li><a href="/gallery/experiments/light/">∙ Light Experiments</a></li>
      </ul>
