--- a/gallery/index.html
+++ b/gallery/index.html
@@ -74,6 +74,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/gallery/digicam/sunsets/">
+      <img src="/img/gallery/digicam/digicam01.jpg" loading="lazy" >
+      <div>
+       <h2 style="font-size:28px">Digicam</h2>
+       <p>Photos taken using my Sony DSC-S85 &#39;Digicam&#39;.</p>
+       <hr>
+       </div>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/gallery/trichrome/">
       <img src="/img/gallery/trichrome/summer/summer01.jpg" loading="lazy" >
       <div>
