--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -71,6 +71,15 @@
      <hr>
     
     <article>
+	<h2>2023-01-31</h2>
+	<p>Happy new year! I&rsquo;ve decided this year to use my short journal as a more detailed monthly record. This month was largely focused on my college application. I&rsquo;m attempting to return to college in September, switching institutions as I do so to be closer to home. This requires a whole new application, portfolio etc which I spent most of this month handling. In my off time I put a decent amount of work into my website, solidifying parts of the website that have been disjointed up until now. I also started a <a href="/knowledge/linux">Linux Wiki</a> of various cheatsheets I&rsquo;ve written over the past year. These were received quite well, and I hope this knowledge will help others learn too. Lastly, this month I was shortlisted and exhibited in The Photographer&rsquo;s Gallery&rsquo;s <a href="https://unthinking.photography/commissions/small-file-photo-festival" target="_blank" rel="noopener">Small File Photo Festival</a>. I&rsquo;m very proud of this exhibition, combining two of my interests: Photography and Image Compression. I&rsquo;m hoping this year I&rsquo;ll be able to move about more and take photos again.</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2022-11-25</h2>
 	<p>  What a wild month! I started the month updating a finishing off my <a href="https://d00k.net/projects/adwaitapod/" target="_blank" rel="noopener">adwaitapod</a> theme for rockbox. I also spent the past 3 weeks learning to program in C, building up to the Rebble Hackathon last weekend where I put together my watchface design, <a href="https://d00k.net/projects/pebble/timetwistpop/" target="_blank" rel="noopener">Time Twist Pop</a> and released it! It was incredibly frustrating at times, since I really have very little experience programming. However, by the end of the weekend I was getting into the zone and pumping out some really good stuff and was having a blast! Really looking forward to making more with C in the future!</p>
 
